# unslop

./: .gitignore  CLAUDE.md  Cargo.toml  WORKFLOW.md  mise.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
bench/: run.sh  smoke.sh
bench/fixtures/: small.md
bench/results/: report.md
docs/: RULES.md
docs/adr/: 001-textlint-compatibility-policy.md  002-tokenizer-choice.md  003-document-segment-extraction.md  004-test-strategy.md  README.md
examples/: dbg.rs
scripts/: new-rule.sh  regen-golden.sh
src/: config.rs  document.rs  fixer.rs  lib.rs  log.rs  main.rs  morph.rs  rule.rs
src/rules/: mod.rs  prh.rs
src/rules/ai_writing/: ai_tech_writing_guideline.rs  mod.rs  no_ai_colon_continuation.rs  no_ai_emphasis_patterns.rs  no_ai_hype_expressions.rs  no_ai_list_formatting.rs
src/rules/ja_spacing/: ja_no_space_between_full_width.rs  ja_space_between_half_and_full_width.rs  mod.rs
src/rules/jt/: ja_no_abusage.rs  ja_no_mixed_period.rs  ja_no_redundant_expression.rs  ja_no_successive_word.rs  ja_unnatural_alphabet.rs  max_comma.rs  max_ten.rs  mod.rs  no_double_negative_ja.rs  no_doubled_conjunction.rs  no_doubled_conjunctive_particle_ga.rs  no_doubled_joshi.rs  no_exclamation_question_mark.rs  no_hankaku_kana.rs  no_invalid_control_character.rs  no_mix_dearu_desumasu.rs  no_nfd.rs  no_unmatched_pair.rs  sentence_length.rs  (+1 more)
tests/: compat.rs  golden.rs  log.rs
tests/cases/: sentence-length.json
tests/golden/: prh.yml  textlintrc.json
tests/upstream-loader/: extract-all.sh  extract.cjs  hijack.cjs  setup-upstream.sh
(+23 files in other folders)
