[package]
name = "unslop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "unslop"
path = "src/main.rs"

[lib]
name = "unslop"
path = "src/lib.rs"

[dependencies]
comrak = { version = "0.29", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
fancy-regex = "0.13"
anyhow = "1"
once_cell = "1"
unicode-normalization = "0.1"

[dev-dependencies]
insta = { version = "1", features = ["json"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
